fixed footer spacing problem, added 'contact', fixed color of text in toolbar

--- a/format1.css
+++ b/format1.css
@@ -1,6 +1,3 @@
-/*for Amatic font (from --> http://www.cssfontstack.com/Amatic-SC)*/
-@import url(http://fonts.googleapis.com/css?family=Amatic+SC);
-
 @font-face {
     font-family: amaticSC;
     src: url(AmaticSC-Regular.woff);
@@ -8,15 +5,12 @@
 
 body 
 {
-    /*background picture(wrinkled paper) from --> http://www.psddots.com/light-white-wrinkled-paper-textures/*/
     background-image: url(Stock_Photos_licened/desk-notebook-pen-writing.jpg);
     background-attachment: absolute;
     background-color: white;
     background-size: 100% 100%;
+    margin: 0;
     margin-top: 70px;
-    margin-right: 0;
-    margin-left: 0;
-    margin-bottom: 0;
 
 /* for Amatic font*/
     font-family: amaticSC;
@@ -38,7 +32,7 @@ body
     background-color: lightgray;
     border-radius: 15px 50px;
     border: 3px solid #333;
-    padding: 30px; 
+    padding: 20px; 
     width: 300px;
     height: 60px; 
     margin-left: 450px; 
@@ -48,16 +42,22 @@ body
 
 footer
 {
-    background-color: #333;
-    position: absolute;
-    width: 100%;
+    background-color:#333;
     color: lightgray;
+    clear:both;
+    text-align:center;
+    padding:5px;
     border-top: 10px;
     margin-right: 0;
     margin-left: 0;
     padding-left: 10px;
     padding-right: 10px;
+    height: 50px;
+}
 
+#footerOfLongPage
+{
+    bottom: auto;
 }
 
 ul
@@ -88,11 +88,6 @@ li a
     text-decoration: none;
 }
 
-li a:active
-{
-    background-color: #555; 
-}
-
 li a:hover 
 {
     background-color: #111;
@@ -114,9 +109,29 @@ li a:hover
 #right
 {
     float: right;
+    padding-right: 5px;
 }
 
 #left
 {
     float: left;
 }
+
+.column1of3
+{
+    float: left;
+    width: 33%;
+}
+
+.column2of3
+{
+    float: right;
+    width: 66%;
+}
+
+section {
+    width:350px;
+    /*float:left;*/
+    padding:10px; 
+}
+
